changed directions on carousel;

--- a/new_index.html
+++ b/new_index.html
@@ -61,7 +61,7 @@
             <a class="carousel-item grey darken-2 grey-text text-lighten-5" href="#contact">Contact Me</a>
         </div>
 
-        <div class="row container hide" id="myWork">
+        <div class="row container" id="myWork">
             <div class="row">
 
                 <div class="col s12 m6 l4">
@@ -146,7 +146,8 @@
                             <a class="waves-effect waves-light black-text blue-grey btn"
                                 href="https://peterw515.github.io/GT3-password-generator/" target="_blank">Site</a>
                             <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://github.com/PeterW515/GT3-password-generator" target="_blank">Repository</a>
+                                href="https://github.com/PeterW515/GT3-password-generator"
+                                target="_blank">Repository</a>
                         </div>
                     </div>
                 </div>
@@ -154,98 +155,29 @@
         </div>
 
 
-
-        <div class="row container" id="other">
-            <div class="row">
-
-                <div class="col s12 m6 l4">
-                    <div class="card z-depth-5">
-                        <div class="card-image">
-                            <img class="materialboxed" width="300" src="assets/fos_coffee_shop.png">
-                        </div>
-                        <div class="card-action center-align">
-                            <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://fos-coffee-shop.herokuapp.com/" target="_blank">Sdfsdfite</a>
-                            <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://github.com/PeterW515/fos-coffee-shop" target="_blank">Repository</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m6 l4">
-                    <div class="card z-depth-5">
-                        <div class="card-image">
-                            <img class="materialboxed" width="300" src="assets/weather_dashboard.png">
-                        </div>
-                        <div class="card-action center-align">
-                            <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://peterw515.github.io/GT6-Weather-Dashboard/" target="_blank">Site</a>
-                            <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://github.com/PeterW515/GT6-Weather-Dashboard" target="_blank">Repository</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m6 l4">
-                    <div class="card z-depth-5">
-                        <div class="card-image">
-                            <img class="materialboxed" width="300" src="assets/tech_blog.png">
-                        </div>
-                        <div class="card-action center-align">
-                            <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://gt14-mvc-tech-blog.herokuapp.com/" target="_blank">Site</a>
-                            <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://github.com/PeterW515/GT14-MVC-Tech-Blog" target="_blank">Repository</a>
-                        </div>
-                    </div>
-                </div>
+        <!--carosel test-->
+        <div class="carousel carousel-slider center container">
+            <div class="carousel-fixed-item center">
+                <a class="btn waves-effect white grey-text darken-text-2">button</a>
             </div>
-
-            <div class="row">
-
-                <div class="col s12 m6 l4">
-                    <div class="card z-depth-5">
-                        <div class="card-image">
-                            <img class="materialboxed" width="300" src="assets/note_taker.png">
-                        </div>
-                        <div class="card-action center-align">
-                            <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://peter-gt11-note-taker.herokuapp.com/" target="_blank">Site</a>
-                            <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://github.com/PeterW515/GT11-Note-Taker" target="_blank">Repository</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m6 l4">
-                    <div class="card z-depth-5">
-                        <div class="card-image">
-                            <img class="materialboxed" width="300" src="assets/code_quiz.png">
-                        </div>
-                        <div class="card-action center-align">
-                            <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://peterw515.github.io/GT4-code-quiz/" target="_blank">Site</a>
-                            <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://github.com/PeterW515/GT4-code-quiz" target="_blank">Repository</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col s12 m6 l4">
-                    <div class="card z-depth-5">
-                        <div class="card-image">
-                            <img class="materialboxed" width="300" src="assets/password_gen.png">
-                        </div>
-                        <div class="card-action center-align">
-                            <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://peterw515.github.io/GT3-password-generator/" target="_blank">Site</a>
-                            <a class="waves-effect waves-light black-text blue-grey btn"
-                                href="https://github.com/PeterW515/GT3-password-generator" target="_blank">Repository</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="carousel-item red white-text" href="#one!">
+                <h2>First Panel</h2>
+                <p class="white-text">This is your first panel</p>
+            </div>
+            <div class="carousel-item amber white-text" href="#two!">
+                <h2>Second Panel</h2>
+                <p class="white-text">This is your second panel</p>
+            </div>
+            <div class="carousel-item green white-text" href="#three!">
+                <h2>Third Panel</h2>
+                <p class="white-text">This is your third panel</p>
+            </div>
+            <div class="carousel-item blue white-text" href="#four!">
+                <h2>Fourth Panel</h2>
+                <p class="white-text">This is your fourth panel</p>
             </div>
         </div>
+
 
     </main>
 
