added finishing touches

--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
                 <div class="collection center-align">
                     <a href="mailto:phweigman@gmail.com" class="collection-item black-text">Email</a>
                     <a href="https://github.com/PeterW515" class="collection-item black-text" target="_blank">Github</a>
+                    <a href="www.linkedin.com/in/peter-weigman" class="collection-item black-text" target="_blank">LinkedIn</a>
+                    <a href="./assets/Peter_Weigman_Resume.pdf" class="collection-item black-text" target="_blank">Resume</a>
+
+
                 </div>
             </div>
         </div>
