fixed spelling error

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <div class="collapsible-header">
                             <h5><i class="material-icons">history</i>My Background</h5>
                         </div>
-                        <div class="collapsible-body"><span>Ater graduating from Clemson University in 2018, I began
+                        <div class="collapsible-body"><span>After graduating from Clemson University in 2018, I began
                                 working for Manhattan
                                 Associates, a supply chain software company. As a consultant and then business
                                 analyst, I worked on the functional side of the software. Around the middle of 2020,
