updated meta properties

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Peter Weigman's Portfolio" />
+    <meta property="og:description" content="A collection of my best work, some interesting facts, and contact information." />
+    <meta property="og:image" content="./assets/code_sample.png" />
     <title>Peter Weigman's Portfolio</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
